[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/tank_base.png" type="Texture" id=1]
[ext_resource path="res://Player/Tank/TankTemplate.gd" type="Script" id=2]
[ext_resource path="res://textures/tank_turret.png" type="Texture" id=3]
[ext_resource path="res://Player/Particles/shoot_particles_material.tres" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 32 )

[node name="Tank" type="KinematicBody2D" groups=["Players", "Template"]]
unique_name_in_owner = true
collision_mask = 7
script = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Hitbox"]
unique_name_in_owner = true
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Turret" type="Sprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -32, -128 )
hframes = 6

[node name="BulletPoint" type="Position2D" parent="Turret"]
unique_name_in_owner = true
position = Vector2( 0, -115 )

[node name="ShootParticles" type="Particles2D" parent="Turret/BulletPoint"]
unique_name_in_owner = true
scale = Vector2( 2, 2 )
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 0.9
process_material = ExtResource( 4 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
unique_name_in_owner = true
remote_path = NodePath("../CanvasLayer/NickPosition")
update_rotation = false
update_scale = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
offset = Vector2( 0, 40 )
transform = Transform2D( 1, 0, 0, 1, 0, 40 )
follow_viewport_enable = true

[node name="NickPosition" type="Position2D" parent="CanvasLayer"]

[node name="NickLabel" type="Label" parent="CanvasLayer/NickPosition"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.5
margin_top = -7.0
margin_right = 18.5
margin_bottom = 7.0
grow_horizontal = 2
text = "test"
align = 1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
unique_name_in_owner = true
rect = Rect2( -1, -1, 2, 2 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
